Comment say IO. Send GetAndResetRequest. Increase msgCount from 3 to 3000000, and count from 10 to 100.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 nohup.out
 # Ignore the dist directory that is created by runghc ./Setup.hs build
 dist
+# Ignore benchmark test run results
+master/*.html
