Optimize with -O2, fix some compiler warnings.

--- a/SimpleCounting.cabal
+++ b/SimpleCounting.cabal
@@ -21,3 +21,4 @@ executable SimpleCounting
                      mtl,
                      remote,
                      stm
+  Ghc-Options:      -Wall -O2 -rtsopts
